--- a/apps/backend/docker-compose.yml
+++ b/apps/backend/docker-compose.yml
@@ -10,6 +10,6 @@ services:
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
-    container_name: calendar-app-db
+    container_name: nebrihub-db
     volumes:
       - ./postgres:/var/lib/postgresql/data
